--- a/tests/phpunit/data/searchHits/emptyLabel.html
+++ b/tests/phpunit/data/searchHits/emptyLabel.html
@@ -1,7 +1,7 @@
 <span class="wb-itemlink"><span class="wb-itemlink-label" lang="en" dir="ltr"></span> <span class="wb-itemlink-id">(Q1)</span></span>
 {
     "previous": "attrib",
-    "title": "Q1"
+    "title": "Item:Q1"
 }
 
 <div class="searchresult"><span class="wb-itemlink-description" dir="ltr" lang="de"></span></div>
